--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta property="og:title" content="Thông Tin Cá Nhân Của Tôi" />
     <meta property="og:url" content="https://iamhoang.info/" />
     <meta property="og:type" content="website" />
-    <meta property="og:description" content="Được Thiết Kế Và Vận Hành Bởi Admin Vũ③⑥" />
+    <meta property="og:description" content="Được Thiết Kế Và Vận Hành Bởi Admin Dương Khắc Vũ" />
     <meta property="og:image" content="https://github.com/duongkhacvu1/Photo.github.io/blob/main/3CEC8866-B65D-4FEC-8525-BB33DDBB1F4F.jpeg?raw=true" />
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -497,7 +497,7 @@
                     <div class="header__base-info">
                         <h3 class="title titl--h1" style="color: #00FF99;"><b>Dương Khắc Vũ</b></h3>
                         <ul class="header__social">
-                            <li><a href="https://www.facebook.com/profile.php?id=100071672236824" target="_blank"><span class="nav-link-icon mr-1">
+                            <li><a href="https://www.facebook.com/profile.php?id=100009818072239" target="_blank"><span class="nav-link-icon mr-1">
         <i class="icon-img"><img height="20" src="https://github.com/duongkhacvu1/Photo.github.io/blob/main/D654AB18-8EE1-48F5-80BB-0798A06D56A2.png?raw=true"></i>
        </span></a></li>
                             <li><a href="https://zalo.me/0358567913" target="_blank"><span class="nav-link-icon mr-1">
@@ -528,7 +528,7 @@
                     <ul class="header__contact">
                         <li><span class="overhead"><i class="icon-img"><img height="25" src="https://nvp-jailbreak.github.io/info/img/globe.svg"></i></span>
                             <a href="xxx" target="_blank">
-                                <font color="white" style="color: #00FF99;"><b>Coming Soon</b></font>
+                                <font color="white" style="color: #00FF99;"><b>https://github.com/duongkhacvu36</b></font>
                             </a>
                         </li>
                         <li><span class="overhead"><i class="icon-img"><img height="25" src="https://nvp-jailbreak.github.io/info/img/logomap.png"></i></span>
@@ -563,8 +563,8 @@
                                         <img src="https://nvp-jailbreak.github.io/info/img/momo.png" height="55px">
                                         <div> 
                                             <h4 class="title title--h4" style="color: #00FF99;">Momo</h4>
-                                            <p><b style="color: #00FF99;">Dương Khắc Vũ</b><br><b style="color: #00FF99;">Coming Soon</b></p>
-                                            <button type="button" style="height:30px;width:100px" class="btn btn-primary" onclick="geturl('Coming Soon')">COPY</button>
+                                            <p><b style="color: #00FF99;">Dương Khắc Vũ</b><br><b style="color: #00FF99;">0358567913</b></p>
+                                            <button type="button" style="height:30px;width:100px" class="btn btn-primary" onclick="geturl('0358567913')">COPY</button>
                                         </div>
                                     </div>
                                 </div>
@@ -573,8 +573,8 @@
                                         <img src="https://nvp-jailbreak.github.io/info/img/tsr.png" height="55px">
                                         <div> 
                                             <h4 class="title title--h4" style="color: #00FF99;">TheSieuRe</h4>
-                                            <p><b style="color: #00FF99;">Dương Khắc Vũ</b><br><b style="color: #00FF99;">Coming Soon</b></p>
-                                            <button type="button" style="height:30px;width:100px" class="btn btn-primary" onclick="geturl('Coming Soon')">COPY</button>
+                                            <p><b style="color: #00FF99;">Dương Khắc Vũ</b><br><b style="color: #00FF99;">0358567913</b></p>
+                                            <button type="button" style="height:30px;width:100px" class="btn btn-primary" onclick="geturl('0358567913')">COPY</button>
                                         </div>
                                     </div>
                                 </div>
@@ -583,7 +583,7 @@
 
                             </div>
                             <center>
-                                <a href="https://www.facebook.com/profile.php?id=100071672236824" style="border-color: ##00FFFF;
+                                <a href="https://github.com/duongkhacvu36" style="border-color: ##00FFFF;
             border: solid;">VỀ TRANG CHỦ</a>
 
                             </center>
@@ -605,7 +605,7 @@
                     </script>
 
                     <!-- Footer -->
-                    <footer class="footer"style="color: #00FF99;">© 2022 Designed By <a href="https://www.facebook.com/profile.php?id=100071672236824">Vũ③⑥</a></footer>
+                    <footer class="footer"style="color: #00FF99;">© 2022 Designed By <a href="https://www.facebook.com/profile.php?id=100009818072239">Dương Khắc Vũ</a></footer>
 
 
                 </div>
