--- a/index.html
+++ b/index.html
@@ -442,8 +442,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta name="format-detection" content="telephone=no" />
         <meta name="format-detection" content="address=no" />
-        <meta name="author" content="Vũ③⑥" />
-        <meta name="description" content="iamhoang.info | Designed By Vũ③⑥" />
+        <meta name="author" content="Dương Khắc Vũ" />
+        <meta name="description" content="iamhoang.info | Designed By Dương Khắc Vũ" />
         <meta content='https://scontent.fhph1-1.fna.fbcdn.net/v/t1.6435-9/153149509_1062550404213587_5564245472369457216_n.jpg?_nc_cat=110&ccb=1-3&_nc_sid=e3f864&_nc_ohc=5QhTn0ZB5eoAX96x6_D&_nc_ht=scontent.fhph1-1.fna&oh=0af300ac0619cec8194e24c3ea6d7911&oe=60DFDBE6'
             name='msapplication-square310x310logo' />
         <meta content='https://scontent.fhph1-1.fna.fbcdn.net/v/t1.6435-9/153149509_1062550404213587_5564245472369457216_n.jpg?_nc_cat=110&ccb=1-3&_nc_sid=e3f864&_nc_ohc=5QhTn0ZB5eoAX96x6_D&_nc_ht=scontent.fhph1-1.fna&oh=0af300ac0619cec8194e24c3ea6d7911&oe=60DFDBE6'
