--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@
 
         <!-- Header Image -->
         <div class="header-image">
-            <div class="js-parallax" style="background-image: url(https://4k-wallpapers.net/uploads/posts/2021-02/thumbs/1614185673_valley-landscape-mountains-gradient-background-colorful-background.jpg);"></div>
+            <div class="js-parallax" style="background-image: url(https://wallpaperaccess.com/full/2159510.jpg);"></div>
         </div>
 
         <div class="container gutter-top ">
