--- a/index.html
+++ b/index.html
@@ -527,12 +527,12 @@
                     </ul>
                     <ul class="header__contact">
                         <li><span class="overhead"><i class="icon-img"><img height="25" src="https://nvp-jailbreak.github.io/info/img/globe.svg"></i></span>
-                            <a href="xxx" target="_blank">
-                                <font color="white" style="color: #00FF99;"><b>https://github.com/duongkhacvu36</b></font>
+                            <a href="https://github.com/duongkhacvu36/" target="_blank">
+                                <font color="white" style="color: #00FF99;"><b>https://github.com/duongkhacvu36/</b></font>
                             </a>
                         </li>
                         <li><span class="overhead"><i class="icon-img"><img height="25" src="https://nvp-jailbreak.github.io/info/img/logomap.png"></i></span>
-                            <a href="/" target="_blank">
+                            <a href="https://www.google.com/maps/d/viewer?mid=1g1SqwdD-ER87FCBb7wrRa8He6wI&ie=UTF8&t=m&vpsrc=0&oe=UTF8&msa=0&ll=19.708132304227384%2C105.68062299999998&z=9" target="_blank">
                                 <font color="white" style="color: #00FF99;"><b>Thanh Hoá</b></font>
                             </a>
                         </li>
