--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
                             </a>
                         </li>
                         <li><span class="overhead"><i class="icon-img"><img height="25" src="https://nvp-jailbreak.github.io/info/img/logomap.png"></i></span>
-                            <a href="https://www.google.com/maps/d/viewer?mid=1g1SqwdD-ER87FCBb7wrRa8He6wI&ie=UTF8&t=m&vpsrc=0&oe=UTF8&msa=0&ll=19.708132304227384%2C105.68062299999998&z=9" target="_blank">
+                            <a href="https://www.google.com/maps/place/Thiệu+Dương,+Thanh+Hoá,+Việt+Nam/@19.8630815,105.769249,14z/data=!4m5!3m4!1s0x3136f62fcd6c2995:0x9746a2c828f5870d!8m2!3d19.866072!4d105.768586?hl=vi-vn" target="_blank">
                                 <font color="white" style="color: #00FF99;"><b>Thanh Hoá</b></font>
                             </a>
                         </li>
