--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html xmlns="http://www.w3.org/1999/xhtml"><head>
-    <title></title>
+    <title>Cổng thông tin điện tử Bộ Công An</title>
     <link rel="Shortcut Icon" href="images/favicon.ico" type="image/x-icon">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta content="INDEX,FOLLOW" name="robots">
