--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <b>CỤC AN NINH MẠNG VÀ PHÒNG CHỐNG TỘI PHẠM SỬ DỤNG CÔNG NGHỆ CAO</b>
     </div>
     <div style="text-align: center;">
-        <img src="logomin.jpg" alt="Logo">
+        <img src="logo.png" alt="Logo">
     </div>
     <div style="text-align: center; font-size: 25px; padding-top: 20px; font-weight: bold;">
         CẢNH BÁO
