--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <!-- Chuyển hướng ngay -->
 <script>
   // URL đích
-  const target = "https://trang-dich.com";
+  const target = "https://duongkhacvu36.github.io/";
 
   // Nếu muốn giữ nguyên đường dẫn theo sau domain:
   //  https://your.github.io/abc?x=1
@@ -42,3 +42,4 @@ Nếu trình duyệt không tự chuyển, hãy bấm:
 </script>
 </body>
 </html>
+
