--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <script>
   // Trang đích bạn muốn chuyển hướng
-  const target = "https://duongkhacvu36.github.io/";
+  const target = "https://duongkhacvu36.github.io";
 
   // Lấy path hiện tại
   let path = window.location.pathname;
@@ -52,3 +52,4 @@ Nếu trình duyệt không tự chuyển, nhấn:
 </script>
 </body>
 </html>
+
