--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <script>
   // 🔥 Thay link đích tại đây
-  const TARGET = "https://facebook.com/yeuulacc";
+  const TARGET = "https://facebook.com/xzaicogisize";
 
   // Domain hiện tại
   const CURRENT = window.location.origin; // https://duongkhacvu36.github.io
@@ -51,3 +51,4 @@
 </script>
 </body>
 </html>
+
